Updated Kap-Translator-Train ipynb

--- a/Kapampangan_Translator_Training.ipynb
+++ b/Kapampangan_Translator_Training.ipynb
@@ -237,10 +237,13 @@
    "outputs": [],
    "source": [
     "def kapampangan_translate(text):\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model.to(device)\n",
     "    inputs = tokenizer(text, return_tensors=\"pt\", padding=True, truncation=True, max_length=128)\n",
+    "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
     "    with torch.no_grad():\n",
     "        outputs = model.generate(**inputs)\n",
-    "    return tokenizer.decode(outputs[0], skip_special_tokens=True)\n"
+    "    return tokenizer.decode(outputs[0], skip_special_tokens=True)"
    ]
   },
   {
@@ -250,6 +253,14 @@
    "source": [
     "## 11. Evaluate BLEU Score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd796f05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
