--- a/Wav2Vec2_Kapampangan_Training.ipynb
+++ b/Wav2Vec2_Kapampangan_Training.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2c2db497",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "Using device: CPU\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import re\n",
@@ -40,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8cec59b7",
    "metadata": {},
    "outputs": [],
@@ -63,13 +81,25 @@
    "execution_count": null,
    "id": "ebad40dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[33;03m\"\"\"Loads the dataset from the metadata.csv file.\"\"\"\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m metadata_path = os.path.join(\u001b[43mdata\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mmetadata.csv\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(metadata_path):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\n\u001b[32m      5\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mmetadata.csv not found in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mPlease ensure you have run the prepare_kapampangan_dataset.py script first.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      7\u001b[39m     )\n",
+      "\u001b[31mNameError\u001b[39m: name 'data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "    \"\"\"Loads the dataset from the metadata.csv file.\"\"\"\n",
-    "    metadata_path = os.path.join(data_folder, \"metadata.csv\")\n",
+    "    metadata_path = os.path.join(data, \"metadata.csv\")\n",
     "    if not os.path.exists(metadata_path):\n",
     "        raise FileNotFoundError(\n",
-    "            f\"metadata.csv not found in {data_folder}. \"\n",
+    "            f\"metadata.csv not found in {data}. \"\n",
     "            \"Please ensure you have run the prepare_kapampangan_dataset.py script first.\"\n",
     "        )\n",
     "    dataset_df = pd.read_csv(metadata_path)\n",
@@ -550,8 +580,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
