--- a/Wav2Vec2_Kapampangan_Training.ipynb
+++ b/Wav2Vec2_Kapampangan_Training.ipynb
@@ -2,24 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "2c2db497",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n",
       "Using device: CPU\n"
      ]
     }
@@ -58,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "8cec59b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATED_DATA_FOLDER = 'data/kapampangan_audio'  # The folder with Kapampangan audio and transcriptions\n",
+    "VALIDATED_DATA_FOLDER = 'data/Cleaned_Audio_Files'  # The folder with Kapampangan audio and transcriptions\n",
     "MODEL_OUTPUT_DIR = './kapampangan_wav2vec2_model'  # Directory to save the trained model\n",
     "BASE_MODEL = \"facebook/wav2vec2-large-xlsr-53\"  # Base model for fine-tuning\n"
    ]
@@ -78,29 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ebad40dd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[33;03m\"\"\"Loads the dataset from the metadata.csv file.\"\"\"\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m metadata_path = os.path.join(\u001b[43mdata\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mmetadata.csv\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(metadata_path):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\n\u001b[32m      5\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mmetadata.csv not found in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mPlease ensure you have run the prepare_kapampangan_dataset.py script first.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      7\u001b[39m     )\n",
-      "\u001b[31mNameError\u001b[39m: name 'data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def load_custom_dataset(data_folder):\n",
     "    \"\"\"Loads the dataset from the metadata.csv file.\"\"\"\n",
-    "    metadata_path = os.path.join(data, \"metadata.csv\")\n",
+    "    metadata_path = os.path.join(data_folder, \"metadata.csv\")\n",
     "    if not os.path.exists(metadata_path):\n",
     "        raise FileNotFoundError(\n",
-    "            f\"metadata.csv not found in {data}. \"\n",
-    "            \"Please ensure you have run the prepare_kapampangan_dataset.py script first.\"\n",
+    "            f\"metadata.csv not found in {data_folder}. \"\n",
     "        )\n",
     "    dataset_df = pd.read_csv(metadata_path)\n",
     "    # Convert DataFrame to Hugging Face Dataset object\n",
@@ -118,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "36d70721",
    "metadata": {},
    "outputs": [],
@@ -179,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "96ca01d3",
    "metadata": {},
    "outputs": [],
@@ -247,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b807b0ee",
    "metadata": {},
    "outputs": [],
@@ -314,10 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "99a0aede",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Step 1: Loading Kapampangan Dataset ---\n",
+      "Dataset split into 160 training samples and 40 evaluation samples.\n"
+     ]
+    }
+   ],
    "source": [
     "# Load custom dataset\n",
     "print(\"--- Step 1: Loading Kapampangan Dataset ---\")\n",
@@ -352,10 +339,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "50ff88b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Step 2: Creating Kapampangan Vocabulary ---\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f796b93ab29c43ba84307ff6b3876b45",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/160 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary created and saved to ./kapampangan_wav2vec2_model\\vocab.json\n",
+      "Vocabulary size: 26\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Step 2: Creating Kapampangan Vocabulary ---\")\n",
     "vocab_path = create_vocabulary(train_dataset)"
@@ -371,10 +389,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "5957d263",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Step 3: Setting up Processor ---\n",
+      "Processor created and saved.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Step 3: Setting up Processor ---\")\n",
     "\n",
@@ -410,10 +438,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d7660940",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Step 4: Preprocessing Data ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing complete: 160 / 160 samples successfully processed.\n",
+      "Preprocessing complete: 40 / 40 samples successfully processed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Step 4: Preprocessing Data ---\")\n",
     "processed_train_dataset = preprocess_data(train_dataset, processor)\n",
@@ -430,10 +483,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "616c063f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Step 5: Setting up Model and Trainer ---\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-large-xlsr-53 and are newly initialized: ['lm_head.bias', 'lm_head.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Step 5: Setting up Model and Trainer ---\")\n",
     "\n",
@@ -495,7 +565,54 @@
    "execution_count": null,
    "id": "25ceff78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Step 6: Starting Kapampangan Training ---\n",
+      "This may take some time depending on your machine and dataset size.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='4' max='600' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  4/600 01:18 < 6:29:42, 0.03 it/s, Epoch 0.15/30]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print(\"\\n--- Step 6: Starting Kapampangan Training ---\")\n",
     "print(\"This may take some time depending on your machine and dataset size.\")\n",
