--- a/Wav2Vec2_Kapampangan_Training.ipynb
+++ b/Wav2Vec2_Kapampangan_Training.ipynb
@@ -482,77 +482,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "616c063f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Step 5: Setting up Model and Trainer ---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of Wav2Vec2ForCTC were not initialized from the model checkpoint at facebook/wav2vec2-large-xlsr-53 and are newly initialized: ['lm_head.bias', 'lm_head.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"\\n--- Step 5: Setting up Model and Trainer ---\")\n",
-    "\n",
-    "data_collator = DataCollatorCTCWithPadding(processor=processor)\n",
-    "wer_metric = evaluate.load(\"wer\")\n",
-    "\n",
-    "model = Wav2Vec2ForCTC.from_pretrained(\n",
-    "    BASE_MODEL,\n",
-    "    ctc_loss_reduction=\"mean\",\n",
-    "    pad_token_id=tokenizer.pad_token_id,\n",
-    "    vocab_size=len(tokenizer)\n",
-    ")\n",
-    "model.freeze_feature_encoder()\n",
-    "\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir=MODEL_OUTPUT_DIR,\n",
-    "    gradient_accumulation_steps=4,\n",
-    "    group_by_length=True,\n",
-    "    length_column_name=\"input_length\",\n",
-    "    per_device_train_batch_size=2,  #Lower batch size for smaller dataset\n",
-    "    per_device_eval_batch_size=2,\n",
-    "    num_train_epochs=30, # More epochs for smaller dataset\n",
-    "    save_strategy=\"epoch\",\n",
-    "    save_total_limit=3,\n",
-    "    fp16=torch.cuda.is_available(),\n",
-    "    gradient_checkpointing=True,\n",
-    "    save_steps=100, # Save more frequently\n",
-    "    eval_steps=100,\n",
-    "    logging_steps=25,\n",
-    "    learning_rate=1e-4, # Lower learning rate for fine-tuning\n",
-    "    warmup_steps=200,\n",
-    "    push_to_hub=False,\n",
-    "    remove_unused_columns=False,\n",
-    ")\n",
-    "# Create compute_metrics function with processor and wer_metric\n",
-    "def compute_metrics_wrapper(pred):\n",
-    "    return compute_metrics(pred, processor, wer_metric)\n",
-    "\n",
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    data_collator=data_collator,\n",
-    "    args=training_args,\n",
-    "    compute_metrics=compute_metrics_wrapper,\n",
-    "    train_dataset=processed_train_dataset,\n",
-    "    eval_dataset=processed_eval_dataset,\n",
-    ")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a34b7580",
    "metadata": {},
@@ -591,8 +520,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='4' max='600' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  4/600 01:18 < 6:29:42, 0.03 it/s, Epoch 0.15/30]\n",
+       "      <progress value='94' max='600' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 94/600 51:08 < 4:41:19, 0.03 it/s, Epoch 4.65/30]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -602,6 +531,18 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>15.471600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50</td>\n",
+       "      <td>15.111500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75</td>\n",
+       "      <td>10.815000</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -611,6 +552,36 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
