--- a/Wav2Vec2_Kapampangan_Training.ipynb
+++ b/Wav2Vec2_Kapampangan_Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "2c2db497",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: CPU\n"
+      "Using device: NVIDIA GeForce RTX 4050 Laptop GPU\n"
      ]
     }
    ],
@@ -38,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "012c7e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "94f2da24",
    "metadata": {},
@@ -48,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8cec59b7",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "ebad40dd",
    "metadata": {},
    "outputs": [],
@@ -79,6 +87,7 @@
     "    if not os.path.exists(metadata_path):\n",
     "        raise FileNotFoundError(\n",
     "            f\"metadata.csv not found in {data_folder}. \"\n",
+    "            \"Please ensure you have run the prepare_kapampangan_dataset.py script first.\"\n",
     "        )\n",
     "    dataset_df = pd.read_csv(metadata_path)\n",
     "    # Convert DataFrame to Hugging Face Dataset object\n",
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "36d70721",
    "metadata": {},
    "outputs": [],
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "96ca01d3",
    "metadata": {},
    "outputs": [],
@@ -225,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "b807b0ee",
    "metadata": {},
    "outputs": [],
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "99a0aede",
    "metadata": {},
    "outputs": [
@@ -300,8 +309,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Step 1: Loading Kapampangan Dataset ---\n",
-      "Dataset split into 160 training samples and 40 evaluation samples.\n"
+      "--- Step 1: Loading Kapampangan Dataset ---\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "metadata.csv not found in data/kapampangan_audio. Please ensure you have run the prepare_kapampangan_dataset.py script first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Load custom dataset\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m--- Step 1: Loading Kapampangan Dataset ---\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m raw_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mload_custom_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mVALIDATED_DATA_FOLDER\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DatasetDict\n\u001b[0;32m      6\u001b[0m RANDOM_SEED \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m42\u001b[39m\n",
+      "Cell \u001b[1;32mIn[4], line 5\u001b[0m, in \u001b[0;36mload_custom_dataset\u001b[1;34m(data_folder)\u001b[0m\n\u001b[0;32m      3\u001b[0m metadata_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_folder, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmetadata.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(metadata_path):\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmetadata.csv not found in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdata_folder\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease ensure you have run the prepare_kapampangan_dataset.py script first.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      8\u001b[0m     )\n\u001b[0;32m      9\u001b[0m dataset_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(metadata_path)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Convert DataFrame to Hugging Face Dataset object\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: metadata.csv not found in data/kapampangan_audio. Please ensure you have run the prepare_kapampangan_dataset.py script first."
      ]
     }
    ],
@@ -339,41 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "50ff88b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Step 2: Creating Kapampangan Vocabulary ---\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f796b93ab29c43ba84307ff6b3876b45",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/160 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vocabulary created and saved to ./kapampangan_wav2vec2_model\\vocab.json\n",
-      "Vocabulary size: 26\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\n--- Step 2: Creating Kapampangan Vocabulary ---\")\n",
     "vocab_path = create_vocabulary(train_dataset)"
@@ -389,20 +378,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5957d263",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Step 3: Setting up Processor ---\n",
-      "Processor created and saved.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\n--- Step 3: Setting up Processor ---\")\n",
     "\n",
@@ -438,35 +417,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "d7660940",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Step 4: Preprocessing Data ---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Preprocessing complete: 160 / 160 samples successfully processed.\n",
-      "Preprocessing complete: 40 / 40 samples successfully processed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\n--- Step 4: Preprocessing Data ---\")\n",
     "processed_train_dataset = preprocess_data(train_dataset, processor)\n",
@@ -482,6 +436,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "616c063f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n--- Step 5: Setting up Model and Trainer ---\")\n",
+    "\n",
+    "data_collator = DataCollatorCTCWithPadding(processor=processor)\n",
+    "wer_metric = evaluate.load(\"wer\")\n",
+    "\n",
+    "model = Wav2Vec2ForCTC.from_pretrained(\n",
+    "    BASE_MODEL,\n",
+    "    ctc_loss_reduction=\"mean\",\n",
+    "    pad_token_id=tokenizer.pad_token_id,\n",
+    "    vocab_size=len(tokenizer)\n",
+    ")\n",
+    "model.freeze_feature_encoder()\n",
+    "\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=MODEL_OUTPUT_DIR,\n",
+    "    gradient_accumulation_steps=4,\n",
+    "    group_by_length=True,\n",
+    "    length_column_name=\"input_length\",\n",
+    "    per_device_train_batch_size=2,  #Lower batch size for smaller dataset\n",
+    "    per_device_eval_batch_size=2,\n",
+    "    num_train_epochs=30, # More epochs for smaller dataset\n",
+    "    save_strategy=\"epoch\",\n",
+    "    save_total_limit=3,\n",
+    "    fp16=torch.cuda.is_available(),\n",
+    "    gradient_checkpointing=True,\n",
+    "    save_steps=100, # Save more frequently\n",
+    "    eval_steps=100,\n",
+    "    logging_steps=25,\n",
+    "    learning_rate=1e-4, # Lower learning rate for fine-tuning\n",
+    "    warmup_steps=200,\n",
+    "    push_to_hub=False,\n",
+    "    remove_unused_columns=False,\n",
+    ")\n",
+    "# Create compute_metrics function with processor and wer_metric\n",
+    "def compute_metrics_wrapper(pred):\n",
+    "    return compute_metrics(pred, processor, wer_metric)\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    data_collator=data_collator,\n",
+    "    args=training_args,\n",
+    "    compute_metrics=compute_metrics_wrapper,\n",
+    "    train_dataset=processed_train_dataset,\n",
+    "    eval_dataset=processed_eval_dataset,\n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a34b7580",
    "metadata": {},
@@ -494,96 +502,7 @@
    "execution_count": null,
    "id": "25ceff78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Step 6: Starting Kapampangan Training ---\n",
-      "This may take some time depending on your machine and dataset size.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='94' max='600' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 94/600 51:08 < 4:41:19, 0.03 it/s, Epoch 4.65/30]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>25</td>\n",
-       "      <td>15.471600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>50</td>\n",
-       "      <td>15.111500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75</td>\n",
-       "      <td>10.815000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\transformers\\models\\wav2vec2\\processing_wav2vec2.py:170: UserWarning: `as_target_processor` is deprecated and will be removed in v5 of Transformers. You can process your labels by using the argument `text` of the regular `__call__` method (either in the same call as your audio inputs, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\PC\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\torch\\utils\\checkpoint.py:86: UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"\\n--- Step 6: Starting Kapampangan Training ---\")\n",
     "print(\"This may take some time depending on your machine and dataset size.\")\n",
@@ -683,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
