--- a/Kapampangan_Translator_Training.ipynb
+++ b/Kapampangan_Translator_Training.ipynb
@@ -143,17 +143,17 @@
    "source": [
     "training_args = Seq2SeqTrainingArguments(\n",
     "    output_dir=MODEL_DIR,\n",
-    "    learning_rate=5e-6,\n",
+    "    learning_rate=1e-4,\n",
     "    per_device_train_batch_size=4,\n",
     "    per_device_eval_batch_size=4,\n",
-    "    num_train_epochs=30,\n",
+    "    num_train_epochs=15,\n",
     "    weight_decay=0.01,\n",
     "    predict_with_generate=True,\n",
     "    save_total_limit=2,\n",
     "    logging_dir=\"./logs\",\n",
-    "    evaluation_strategy=\"epoch\",\n",
-    "    logging_strategy=\"epoch\",\n",
-    "    save_strategy=\"epoch\",\n",
+    "    eval_steps=500,       # evaluate every 500 steps\n",
+    "    logging_steps=500,    # log every 500 steps\n",
+    "    save_steps=500,       # save every 500 steps\n",
     "    fp16=torch.cuda.is_available(),\n",
     ")\n"
    ]
