--- a/Wav2Vec2_Kapampangan_Training.ipynb
+++ b/Wav2Vec2_Kapampangan_Training.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "616c063f",
    "metadata": {},
    "outputs": [
@@ -516,10 +516,16 @@
     }
    ],
    "source": [
+    "from transformers import EarlyStoppingCallback\n",
+    "import evaluate\n",
+    "\n",
     "print(\"\\n--- Step 5: Setting up Model and Trainer ---\")\n",
     "\n",
     "data_collator = DataCollatorCTCWithPadding(processor=processor)\n",
+    "\n",
+    "# Load metrics\n",
     "wer_metric = evaluate.load(\"wer\")\n",
+    "acc_metric = evaluate.load(\"accuracy\")\n",
     "\n",
     "model = Wav2Vec2ForCTC.from_pretrained(\n",
     "    BASE_MODEL,\n",
@@ -534,24 +540,37 @@
     "    gradient_accumulation_steps=4,\n",
     "    group_by_length=True,\n",
     "    length_column_name=\"input_length\",\n",
-    "    per_device_train_batch_size=2,  #Lower batch size for smaller dataset\n",
+    "    per_device_train_batch_size=2,\n",
     "    per_device_eval_batch_size=2,\n",
-    "    num_train_epochs=30, # More epochs for smaller dataset\n",
+    "    num_train_epochs=30,\n",
     "    save_strategy=\"epoch\",\n",
     "    save_total_limit=3,\n",
     "    fp16=torch.cuda.is_available(),\n",
     "    gradient_checkpointing=True,\n",
-    "    save_steps=100, # Save more frequently\n",
-    "    eval_steps=100,\n",
-    "    logging_steps=25,\n",
-    "    learning_rate=1e-4, # Lower learning rate for fine-tuning\n",
+    "    save_steps=100,\n",
+    "    eval_steps=100,            # <-- evaluate every 100 steps\n",
+    "    logging_steps=25,          # <-- log metrics more frequently\n",
+    "    learning_rate=1e-4,\n",
     "    warmup_steps=200,\n",
     "    push_to_hub=False,\n",
     "    remove_unused_columns=False,\n",
+    "    load_best_model_at_end=True,   # <-- load best checkpoint\n",
+    "    metric_for_best_model=\"wer\",   # <-- decide based on WER\n",
+    "    greater_is_better=False,       # <-- lower WER is better\n",
     ")\n",
-    "# Create compute_metrics function with processor and wer_metric\n",
+    "\n",
+    "# Compute both WER & Accuracy\n",
     "def compute_metrics_wrapper(pred):\n",
-    "    return compute_metrics(pred, processor, wer_metric)\n",
+    "    pred_logits = pred.predictions\n",
+    "    pred_ids = np.argmax(pred_logits, axis=-1)\n",
+    "    pred_str = processor.batch_decode(pred_ids, skip_special_tokens=True)\n",
+    "    label_ids = pred.label_ids\n",
+    "    label_str = processor.batch_decode(label_ids, group_tokens=False)\n",
+    "\n",
+    "    wer = wer_metric.compute(predictions=pred_str, references=label_str)\n",
+    "    acc = acc_metric.compute(predictions=pred_str, references=label_str)\n",
+    "\n",
+    "    return {\"wer\": wer, \"accuracy\": acc[\"accuracy\"]}\n",
     "\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
@@ -560,6 +579,7 @@
     "    compute_metrics=compute_metrics_wrapper,\n",
     "    train_dataset=processed_train_dataset,\n",
     "    eval_dataset=processed_eval_dataset,\n",
+    "    callbacks=[EarlyStoppingCallback(early_stopping_patience=3)],  # <-- early stopping\n",
     ")\n"
    ]
   },
